modify _syntax.scss (code)

--- a/_publications/2022-05-miutsu.md
+++ b/_publications/2022-05-miutsu.md
@@ -2,11 +2,13 @@
 title: "Miutsu: NTU’s TaskBot for the Alexa Prize"
 collection: publications
 permalink: /publication/miutsu
-excerpt: 'This paper introduces Miutsu, National Taiwan University’s Alexa Prize TaskBot, which is designed to assist users in completing tasks requiring multiple steps and decisions in two different domains – home improvement and cooking. We overview our system design and architectural goals, and detail the proposed core elements, including question answering, task retrieval, social chatting, and various conver- sational modules. A dialogue flow is proposed to provide a robust and engaging conversation when handling complex tasks. We discuss the faced challenges during the competition and potential future work.'
+excerpt: 'Lin, Yen-Ting and Kuo, Hui-Chi and Xu, Ze-Song and <strong>Chiu, Ssu </strong> and Hung, Chieh-Chi and Chen, Yi-Cheng and Huang, Chao-Wei and Chen, Yun-Nung'
 date: 2022-05-16
 venue: 'Arxiv'
 paperurl: 'https://arxiv.org/abs/2205.07446'
 ---
+
+This paper introduces Miutsu, National Taiwan University’s Alexa Prize TaskBot, which is designed to assist users in completing tasks requiring multiple steps and decisions in two different domains – home improvement and cooking. We overview our system design and architectural goals, and detail the proposed core elements, including question answering, task retrieval, social chatting, and various conver- sational modules. A dialogue flow is proposed to provide a robust and engaging conversation when handling complex tasks. We discuss the faced challenges during the competition and potential future work.
 
 [Download paper here](https://arxiv.org/abs/2205.07446)
 
